# device-connect

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  Roadmap.md  SECURITY.md  class-map.html  ruff.toml
.github/workflows/: c-sdk.yml  ci.yml  release.yml
docs/: README.md  class-map.html  device-mandates-spec.md  device-mandates.md  discovery-release-test-summary.md  discovery.md  zenoh-per-tenant-cn.md  zenoh-portal-enablement.md  zenoh-portal-followups.md
docs/adr/: 0001-selector-driven-discovery.md
examples/: agent-to-agent-dispatch.md
examples/coding_worker/: README.md  WALKTHROUGH.md  coding_worker.py  provision.sh  pyproject.toml
examples/peer-lifecycle/: device_a.py  device_b.py
tests/: .gitignore  CLAUDE.md  README.md  conftest.py  docker-compose-itest.yml  pytest.ini  requirements.txt
tests/container_itest/: Dockerfile.echo-cap  conftest.py  docker-compose-container-itest.yml  test_container_ipc.py
tests/drivers/: camera.py  robot.py  sensor.py
tests/fixtures/: devices.py  events.py  infrastructure.py  inject.py  orchestrator.py  scale.py
tests/tests/: __init__.py  test_d2d_discovery.py  test_d2d_events.py  test_d2d_rpc.py  test_d2o_events.py  test_d2o_rpc.py  test_device_lifecycle.py  test_messaging_conformance.py  test_multi_device_scenario.py  test_sensor_device.py  test_strands_agent.py  test_tools_broadcast.py  test_tools_discover.py  test_tools_hierarchical.py  test_tools_invoke.py  test_tools_large_fleet_broadcast.py  test_tools_large_fleet_discovery.py  test_tools_large_fleet_heterogeneous.py  (+4 more)
(+2 files in other folders)
